Changes to generating of docker image, angular services, some updates to login GUI process
