# src/main/java/sk/filo/plantdiary/controller/EventController.java
@@ -1,5 +1,6 @@
 package sk.filo.plantdiary.controller;
 
+import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -21,7 +22,7 @@ import java.util.List;
 
 @Tag(name = "event", description = "Plant events endpoint")
 @RestController
-@RequestMapping("/api")
+@RequestMapping("/api/event")
 public class EventController {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(EventController.class);
@@ -32,26 +33,26 @@ public class EventController {
         this.eventService = eventService;
     }
 
-    @PostMapping("/event")
-    public ResponseEntity<EventSO> create(@Valid @NotNull @RequestBody CreateEventSO createEventSO) {
+    @PostMapping
+    public ResponseEntity<EventSO> createEvent(@Valid @NotNull @RequestBody CreateEventSO createEventSO) {
         LOGGER.debug("create({})", createEventSO);
         return new ResponseEntity<>(eventService.create(createEventSO), HttpStatus.CREATED);
     }
 
-    @PutMapping("/event")
-    public ResponseEntity<EventSO> update(@Valid @NotNull @RequestBody UpdateEventSO updateEventSO) {
+    @PutMapping
+    public ResponseEntity<EventSO> updateEvent(@Valid @NotNull @RequestBody UpdateEventSO updateEventSO) {
         LOGGER.debug("update({})", updateEventSO);
         return new ResponseEntity<>(eventService.update(updateEventSO), HttpStatus.OK);
     }
 
-    @GetMapping("/event/{id}")
-    public ResponseEntity<EventSO> getOne(@NotNull @PathVariable Long id) {
+    @GetMapping("/{id}")
+    public ResponseEntity<EventSO> getOneEvent(@NotNull @PathVariable Long id) {
         LOGGER.debug("getOne({})", id);
         return new ResponseEntity<>(eventService.getOne(id), HttpStatus.OK);
     }
 
-    @GetMapping("/event/all/{plantId}")
-    public ResponseEntity<Page<EventSO>> getAllByPlantId(
+    @GetMapping("/all/{plantId}")
+    public ResponseEntity<Page<EventSO>> getAllEventsByPlantId(
             @NotNull @PathVariable Long plantId,
             @NotNull @Min(0) @RequestParam Integer page,
             @NotNull @Min(5) @Max(100) @RequestParam Integer pageSize) {
@@ -60,15 +61,15 @@ public class EventController {
         return new ResponseEntity<>(eventService.getAllByPlantIdPaginated(plantId, page, pageSize), HttpStatus.OK);
     }
 
-    @DeleteMapping("/event/{id}")
-    public ResponseEntity delete(@NotNull @PathVariable Long id) {
+    @DeleteMapping("/{id}")
+    public ResponseEntity deleteEvent(@NotNull @PathVariable Long id) {
         LOGGER.debug("delete({})", id);
         eventService.delete(id);
         return new ResponseEntity(HttpStatus.OK);
     }
 
-    @GetMapping("/event/type")
-    public ResponseEntity<List<EventTypeSO>> getAllTypes() {
+    @GetMapping("/type")
+    public ResponseEntity<List<EventTypeSO>> getAllEventTypes() {
         LOGGER.debug("getAllTypes()");
         return new ResponseEntity<>(eventService.getAllTypes(), HttpStatus.OK);
     }
