# src/main/java/sk/filo/plantdiary/controller/UserController.java
@@ -1,5 +1,6 @@
 package sk.filo.plantdiary.controller;
 
+import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -14,7 +15,7 @@ import javax.validation.constraints.NotNull;
 
 @Tag(name = "user", description = "User endpoint")
 @RestController
-@RequestMapping("/api")
+@RequestMapping("/api/user")
 public class UserController {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(UserController.class);
@@ -25,34 +26,34 @@ public class UserController {
         this.userService = userService;
     }
 
-    @PostMapping("/user/register")
-    public ResponseEntity<Void> register(@Valid @NotNull @RequestBody CreateUserSO createUserSO) {
+    @PostMapping("/register")
+    public ResponseEntity<Void> registerUser(@Valid @NotNull @RequestBody CreateUserSO createUserSO) {
         LOGGER.debug("create({})", createUserSO);
         userService.register(createUserSO);
         return new ResponseEntity<>(HttpStatus.CREATED);
     }
 
-    @PutMapping("/user/activate")
-    public ResponseEntity<Void> activate(@Valid @NotNull @RequestBody ActivateUserSO activateUserSO) {
+    @PutMapping("/activate")
+    public ResponseEntity<Void> activateUser(@Valid @NotNull @RequestBody ActivateUserSO activateUserSO) {
         LOGGER.debug("activate({})", activateUserSO);
         userService.activate(activateUserSO);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
-    @PutMapping("/user")
+    @PutMapping
     public ResponseEntity<UserSO> updateOwnUser(@Valid @NotNull @RequestBody UpdateUserSO updateUserSO) {
         LOGGER.debug("updateOwnUser({})", updateUserSO);
         return new ResponseEntity<>(userService.updateOwnUser(updateUserSO), HttpStatus.OK);
     }
 
-    @GetMapping("/user")
+    @GetMapping
     public ResponseEntity<UserSO> getOwnUser() {
         LOGGER.debug("getOwnUser()");
         return new ResponseEntity<>(userService.getOwnUser(), HttpStatus.OK);
     }
 
-    @DeleteMapping("/user")
-    public ResponseEntity<Long> delete(@Valid @NotNull @RequestBody AuthSO authSO) {
+    @DeleteMapping
+    public ResponseEntity<Long> deleteUser(@Valid @NotNull @RequestBody AuthSO authSO) {
         LOGGER.debug("delete()");
         if (userService.canDelete(authSO)) {
             userService.deleteUserAsync(authSO.getUsername());
